ready for anna's edits

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -36,7 +36,7 @@ The University of Chicago}
 
 \doublespacing
 \begin{abstract}
-\noindent This paper uses data from two high-quality randomized, controlled trials and multiple non-experimental sources to provide a life-cycle cost-benefit analysis of early childhood education programs, as well as an understanding of its components. We define and estimate parameters that have a link with different policy-evaluation questions. We explore the outcome categories that are most important when accounting for the programs' costs and benefits and formalize an alternative to the standard solution to multiple hypotheses testing \citep{Lehman_Romano_2005_AnnStat,Romano_Shaikh_2006_AnnStat}. Compared to no exposure to the high-quality programs we analyze, about \positivecsf\  (\positivescsf) of the \noutcomes\ considered outcomes have positive (and significant) treatment effects on females, and \positivecsm\ (\positivescsm) have positive (and significant) effects on males. Our cost-benefit analysis accounts for experimentally induced effects in education, income of program participants and their parents, social costs of welfare participation, criminal activity, and health outcomes. The costs we consider include the deadweight loss to society from taxing individuals to fund the programs. Pooling males and females, we estimate an internal rate of return of \irrp\ (s.e. \irrsep) and a benefit-to-cost ratio of \bcp\ (s.e. \bcsep). For females, these numbers are \irrf\ (s.e.\irrsef) and \bcf\ (s.e. \bcsef); for males, these numbers are \irrm\ (s.e.\irrsem) and \bcm\ (s.e. \bcsem). We provide a sensitivity study and find that our estimates are robust to the various parameterizations our cost-benefit analysis requires.
+\noindent This paper uses data from two high-quality randomized, controlled trials and multiple non-experimental sources to provide a life-cycle cost-benefit analysis of early childhood education programs, as well as an understanding of its components. We define and estimate parameters that have a link with different policy-evaluation questions. We explore the outcome categories that are most important when accounting for the programs' costs and benefits and formalize an alternative to the standard solution to multiple hypotheses testing \citep{Lehman_Romano_2005_AnnStat,Romano_Shaikh_2006_AnnStat}.
 \end{abstract} 
 
 \singlespacing
@@ -465,7 +465,8 @@ Note: This table summarizes the explanatory variables included in the models we 
 \noindent Note: For each outcome category, we compare the mean of the children who received center-based childcare in ABC and center-based childcare and family education in CARE to the mean of the children in the control group in ABC and the control group and the family education treatment group in CARE and count the number of positive comparisons.}
 \end{figure}
 
-\noindent When accounting for control substitution, the counts indicate that the results strengthen for females: \positivef\ of the outcomes display a positive treatment effect when not accounting for control substitution, while \positivecsf\ of the outcomes display a positive treatment effect when comparing the children who attended the programs to a fixed counterfactual in which children stay at home. \positivesm\ of the outcomes are positive and significant at the 10\% level in the former comparison and \positivescsf\ are positive and significant in the latter comparison. For males, the results do not noticeably strengthen and we provide an explanation below. The analogous results to that of females indicate that  \positivem\ (\positivesm) of the outcomes display a positive (and significant) treatment effect when not accounting for control substitution, while \positivecsm\ (\positivescsm) do so when accounting for control substitution. Next, we provide some hints on what the source of these difference could be by describing the treatment effects on a handful of treatment effects of interest.
+\noindent Next we present an overview of outcome-specific results. Appendix~\ref{appendix:results} displays an extensive revision of the estimates for the \noutcomes\ outcomes we consider. Note that: (i) we arbitrarily pick the outcomes we discuss next because we consider them of economic interest; and (ii) Appendix~\ref{appendix:results} displays results accounting for multiple hypothesis testing as in \citet{Lehman_Romano_2005_AnnStat,Romano_Shaikh_2006_AnnStat}. We do not loose significance in the majority of outcomes.\\
+
 
 \begin{figure}[H]
 		\caption{Positively Impacted Outcomes, ABC and CARE} \label{fig:ppositivecategory2}
@@ -475,7 +476,15 @@ Note: This table summarizes the explanatory variables included in the models we 
 \noindent Note: For each outcome category, we compare the mean of the children who received center-based childcare in ABC and center-based childcare and family education in CARE to the mean of the children in the control group in ABC and the control group and the family education treatment group in CARE and count the number of positive comparisons.}
 \end{figure}
 
-\noindent We present an overview of outcome-specific results. Appendix~\ref{appendix:results} displays an extensive revision of the estimates for the \noutcomes\ outcomes we consider. Note that: (i) we arbitrarily pick the results we discuss because we consider them of economic interest; and (ii) Appendix~\ref{appendix:results} displays results accounting for multiple hypothesis testing as in \citet{Lehman_Romano_2005_AnnStat,Romano_Shaikh_2006_AnnStat}. We do not loose significance in the majority of outcomes.\\
+\noindent Table~\ref{table:females} presents the results for females. We focus on three columns. Columns~(2) displays the estimates of the parameter in \eqref{eq:mainest}. This parameter speaks to the effectiveness of the programs, \textit{as implemented}. Columns~(5) and ~(8) display estimates of the parameters in \eqref{eq:par0} and \eqref{eq:par1}. The former speaks to the effectiveness of the programs relative to the fix counterfactual of \textit{staying at home}. The latter speaks to the effectiveness of the programs relative to \textit{attending an alternative preschool}. All of these three estimates account for program attrition and control for a set of background variables.\footnote{See Appendix~\ref{appendix:methodology} for our methodology to account for attrition and Appendix~\ref{appendix:controls} for our procedure for selecting controls.}\\ 
+
+\noindent Column~(2) shows that the program caused substantial gains in a variety of economically relevant short- and long-term outcomes, as implemented. First, the programs have an effect on IQ that goes beyond the effects of many early childhood education programs, which usually fade-out after a year of elementary school \citep{Hojman_2015_EvidenceFadeOut,Elango_Hojman_etal_2016_Early-Edu}. To put this effect in perspective, note that IQ and achievement tests scores are standardized to a nationally-representative populations with a standard deviation of 15 points. The effect of the programs we study amounts to more than $2/3$ of a standard deviation. The highest effect of Head Start, for example, happens before elementary school and amounts to half of the effect of ABC at age 12, the latter effect being measures after the fade-out stage \citep{Elango_Hojman_etal_2016_Early-Edu}. The programs also have a substantial effect on achievement, which not only measures cognition but mathematics and reading knowledge.\\
+
+\noindent The effects that the programs have high-school graduation and years of education at age 30 are sizable. The former increases by \hsgradf\ percentage points and the former by mote than \yearsedf\ years. Although marginally not significant, the programs also: (i) increase labor income; (ii) reduce the dependence on public transfers received from the government; and (iii) increase employment. Importantly, when we group the education and employment outcomes across ages 21 and 30 all of them display a positive treatment effect (see Figure~\ref{fig:ppositivecategory1}).\\
+
+\noindent When fixing the counterfactual patterns, a clear pattern emerges: females benefit much more from the programs relative to staying at home if compared to how they benefit from the programs relative to attending alternative preschools. The differences are substantial: $4$ IQ points at age 12, more than $30$ percetage points in high school graduation, almost a year of education, around $3,000$ 2014 USD of labor income, etc.\\
+
+\noindent In fact, when comparing the parameter estimates in columns (3), (5), and (8) we see that for females: the effectiveness of the program \textit{as implemented} is lower than the effectiveness of the program relative to \textit{staying at home}, while is is greater relative to attending alternative preschools. In an exercise analogous to that of Figure~\ref{fig:ppositive} we find that the programs relative to staying at home cause \positivecsnf\ (\positivescsnf) positive (and significant outcomes). The analogous number relative to attending alternative preschool is \positivecsaf\ (\positivescsaf). This results turns out to be relevant in the calculation of the cost-benefit ratio: they order the relative magnitude of the estimates we provide, depending on the counterfactual comparison.\\ 
 
 \begin{table}[H] 
 \begin{threeparttable}
@@ -486,26 +495,13 @@ Note: This table summarizes the explanatory variables included in the models we 
 \input{output/tables/abccare/rslt_female_main1}}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table displays the treatment effects for females, pooling ABC and CARE. Column (1): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. Column (2): adjusts the estimates in (1) for attrition and controls for a set of covariates (see Appendix~\ref{appendix:controls}). Column (3): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to children who did not receive preschool alternatives. Column (4) adjusts the estimates in (3) for attrition and controls for a set of covariates. Column (5): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely not to be enrolled in alternative preschools. Column (6): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to children who received preschool alternatives. Column (7) adjusts the estimates in (6) for attrition and controls for a set of covariates. Column (8): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely to be enrolled in alternative preschools.
+\item Note: This table displays the treatment effects for females, pooling ABC and CARE. Column (1): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. Column (2): adjusts the estimates in (1) for attrition and controls for a set of covariates (see Appendix~\ref{appendix:controls}). Column (3): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to children who did not receive preschool alternatives. Column (4) adjusts the estimates in (3) for attrition and controls for a set of covariates. Column (5): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely not to be enrolled in alternative preschools. Column (6): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to children who received preschool alternatives. Column (7) adjusts the estimates in (6) for attrition and controls for a set of covariates. Column (8): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely to be enrolled in alternative preschools. The results in bold are significant at the 10\% level in single-side, non-parametric, bootstrapped test.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
+\noindent Table~\ref{table:males} presents the results for males. The programs \textit{as implemented} had statistically and economically significant effects on high-school graduation, employment, prediabetes, and diastolic pressure. The effect on labor income amounts to nearly $20,000$ 2014 USD.\\
 
-\noindent Table~\ref{table:females} presents the results for females. To illustrate how our program attrition and control substitution corrections works, consider years of education at age 30. We discuss the other outcomes afterward.\\
-
-\noindent Column~(1) displays the mean difference in graduation between children assigned and not assigned to receive center-based childcare. This difference amounts to 1.474 years. Column~(2) presents this difference controlling for a set of variables and accounting for program attrition.\footnote{See Appendix~\ref{appendix:controls} for our procedure for selecting controls.} The estimate increases and remains positive and significant.\\ 
-
-\noindent The estimates in column (2) correspond to our first policy question: What is the effect of center-based childcare as implemented? That is, we do not fix alternative preschools take-up.\\
-
-\noindent Columns (3) to (5) provide different ways to fix the control substitute. Specifically, they assess the more policy-relevant question: What is the effect of center-based childcare relative to a counterfactual where the child receives no alternative preschool? In column (3), we compare the mean of children assigned and not assigned to center-based childcare. For children not assigned to center-based childcare, we restrict the sample to those who did not enroll in any alternative preschools. Compared to that of column (1), the effect increases by around half a year. Column (5) most accurately approximates our counterfactual of interest: it compares children in the treatment and control groups who are unlikely to had received preschool alternatives. This is a matching estimator.\footnote{We parameterize the matching using an Epanechnikov kernel-weight approach. Results are not sensitive to matching using nearest neighbor or propensity score matching.} If selection into preschool is based on observed characteristics, column (5) provides a selection-corrected estimate, relative to the estimate in column (3).\\ 
-
-\noindent Comparing columns (2) and (5) indicates that staying at home is a worst alternative in most 
-
-
- The difference between (2) and (5) suggests that parents select on potential gains when enrolling their female children into preschool alternatives. The estimates in columns (3) to (5) suggest that fixing children to an alternative of no preschool implies a sizable increase in the estimated treatment effect of center-based childcare. \\
-
-\noindent Columns (6) to (8) present estimates that inform another policy question: What is the effect of center-based childcare relative to a counterfactual where the child receives care from a fixed preschool alternative? The alternative we fix is any preschool non-preschool. Our information indicates that any of the preschool alternatives where high but presumably lower quality than ABC or CARE and started treatment later, from ages 3 to 5 (see Appendix~\ref{appendix:background}, where we document this and argue that the alternative preschools were roughly homogeneous in quality). Therefore, this experiment consists of evaluating high-quality center-based childcare to an alternative of lower quality and intensity. As expected, the estimates decrease compared to the estimates in which children receive no center-based treatment. As before, the comparison between the estimates in columns (6) and column (8) suggest that parents select on potential gains. This reinforces the claim we make throughout the paper: evaluation parameters depend substantially on the counterfactual comparison.\\
 
 \begin{table}[H] 
 \begin{threeparttable}
@@ -516,58 +512,36 @@ Note: This table summarizes the explanatory variables included in the models we 
 \input{output/tables/abccare/rslt_male_main1}}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table displays the treatment effects for females, pooling ABC and CARE. Column (1): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. Column (2): adjusts the estimates in (1) for attrition and controls for a set of covariates (see Appendix~\ref{appendix:controls}). Column (3): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to children who did not receive preschool alternatives. Column (4) adjusts the estimates in (3) for attrition and controls for a set of covariates. Column (5): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely not to be enrolled in alternative preschools. Column (6): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to children who received preschool alternatives. Column (7) adjusts the estimates in (6) for attrition and controls for a set of covariates. Column (8): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely to be enrolled in alternative preschools.
+\item Note: This table displays the treatment effects for females, pooling ABC and CARE. Column (1): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to. Column (2): adjusts the estimates in (1) for attrition and controls for a set of covariates (see Appendix~\ref{appendix:controls}). Column (3): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to children who did not receive preschool alternatives. Column (4) adjusts the estimates in (3) for attrition and controls for a set of covariates. Column (5): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely not to be enrolled in alternative preschools. Column (6): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, restricting the latter to children who received preschool alternatives. Column (7) adjusts the estimates in (6) for attrition and controls for a set of covariates. Column (8): mean difference between the groups randomly assigned to receive center-based childcare and the groups randomly assigned not to, placing a relatively high weight on the children who are likely to be enrolled in alternative preschools. The results in bold are significant at the 10\% level in single-side, non-parametric, bootstrapped test.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
-\noindent The rest of the outcomes in Table~\ref{table:females} and in Appendix~\ref{appendix:results} follow a similar pattern to years of education.\\
-
-\noindent To illustrate the extent of effects for males, we also present a summary of results in Table~\ref{table:males}. There are two main differences between males and females. First, for males, outcomes of greatest policy interest such as labor income exhibit a much stronger effect. Second, as we discuss below, the pattern in which the effects we present from columns (1) to (8) is not as clear as in the case of females.\\
-
-\noindent For males, correcting for self-selection in the estimates that fix the counterfactual does not consistently indicate that parents enrolled their male children into preschool alternatives based on potential gains. Instead, for some outcomes this correction points toward the opposite effect. To illustrate this, consider employment at age 30. When fixing children to no alternative preschool, the treatment effect increases by more a very little amount, column (1) compared to column (3). This pattern is the same in the case for females. However, unlike females, when correcting for potential self-selection in the preschool enrollment decision, the estimate further increases to more than \$14,000. This estimate could suggest that children with the most potential (or with the best home environment) stay at home, although the analogous estimate for females indicates that female children with the least potential (or with the worst home environment) stay at home.\\
-
-\noindent Other effects as reliance on public-transfer income are not as precisely estimated as the effect on income or employment but they align in pattern and signal the socially positive effects the program had. Finally, as noted in \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}, the effects the program has on long-term health are substantial and go from improvements in blood pressure to decrease in self-reported drug use. As before, accounting for treatment substitution strengthens these results.\\
+\noindent When fixing the counterfactual comparison, a pattern as clear to the one emerging in the case of females is not that clear. When complementing the information with counts of positive (and significant) treatment effects, a pattern does emerge: relative to the programs, males benefit more from \textit{staying at home} than \textit{attending alternative preschools}. Relative to staying at home cause \positivecsnm\ (\positivescsnm) positive (and significant outcomes). The analogous number relative to attending alternative preschool is \positivecsam\ (\positivescsam). The magnitudes of the results in the cost-benefit analysis are  consistent with these results.
 
 \subsection{Cost-benfit Analysis} \label{section:cbaresults}
 
-\noindent The cost-benefit analysis results indicate that the program is socially efficient. We begin by analyzing the results without correcting for control substitution. The present value of the net benefits is much greater for males than for females. Specifically, the benefit cost ratio is ratiofm for females and ratiomm for males. The internal rate of return is irrfm for females and irrmm for males. The gender difference is consistent with the difference in the treatment effects that we find before.\\
+\noindent Table~\ref{table:cba} summarizes the cost-benefit analysis of ABC without accounting for control substitution. All the money figures are in 2014 USD and are discounted to each child's birth age, unless otherwise specified.\\
 
-\noindent Figure~\ref{fig:netbeneffemales} displays the accumulated net present value of each component of the costs and the benefits for females, after discounting. For public-transfer income we only consider the costs from raising the tax to make the transfers. The transfer itself has no value to society because it is a transfer between two agents of society that we value equally.  Thus, our calculations of costs and benefits related to public-transfer income consider exclusively the deadweight loss to society from raising taxes to fund government transfers. For all the costs that are not private, we account for the deadweight loss by multiplying the cost by 1.5. We use a 3\% discount rate, and discount to birth. \\
+\noindent First, we analyze the results pooling males and the females. These indicate that the program is socially efficient: the baseline estimates for the IRR and the benefit-to-cost ratio are \irrp\ and \bcp. The program generates a benefit of \bcp\ for every dollar spent on it. This is of particular importance because ABC is a program that was much more expensive than other early childhood education programs like Perry or Head Start \citep{Elango_Hojman_etal_2016_Early-Edu}---the treatment was much more time- and services-intensive.\\ 
 
-\noindent The main net benefit comes from labor income, which increased on average by inclaborfm for each female in the treatment group over her lifetime. This is consistent with the treatment effects presented earlier: females in the treatment group get more education, participate more in the labor force, and generate more labor income. This also implies there are some social savings through reduced public-transfer income, on average worth transferfm for each female in the treatment group. 
+\noindent The IRR and the benefit-to-cost ratio are robust to several sensitivity exercises. First, we shot down the component due to parental income. In practice, ABC had a childcare subsidy component because it freed-up time for the mothers and allow them to work causing additional parental income. This component amounts to \parincomenpvp. Even after shooting down this benefit component, the IRR and benefit-to-cost ratio indicate social efficiency of the program and remain statistical significance.\\ 
 
-\begin{center}
-\begin{figure}[H] 
-\caption{Accumulated Net Benefits, Females}
-\label{fig:netbeneffemales}
+\noindent Parental income and crime are the components to to which the IRR and the benefit-to-cost ratio are the most sensitive. The reason for the sensitivity to parental income is that the amount is substantial and it is not heavily discounted because it accumulates during the first $15$ years of the children's life.\footnote{We do not account for treatment effects beyond this age. Some children report to move out of their households as early as this age. This makes ambiguous the effects that parental income could have on them after age 15.} Although crime gets much more discounted, the amount due to crime savings is large so shooting it down diminishes both the IRR and the benefit-to-cost ratio.\\ 
+
+\noindent The estimates are robust to shooting down the rest of the components, and in most cases remain statistically significant. This happens for either of two reasons: (i) either they are substantial but they are heavily discounted because they happen later in life---e.g. labor income; or (ii) they happen early in life but are not as substantial---as the amount that the control-group parents pay for their children to attend alternative preschools.\\
+
+\noindent Next, we analyze the estimates when splitting the sample by males and females. Unfortunately, most of our estimates loose significance due to the reduction of observations implied by splitting the sample by gender. However, it is important to note that for both males and females, the estimates remain robust across the different instances of the sensitivity analysis.\\
+
+\noindent For females, we observe consistency except for the case where we remove the parental income component. We can observe the female sample is the main driver of parental income when comparing its net present value between females and males.\\
+
+\noindent For males, the estimates are robust as well. An exception happens when we remove the component corresponding to quality-adjusted life years. Although the cost-to-benefit ratio remains virtually unchanged, the IRR is negative. This IRR is actually uninformative: it is negative due to the fact that, when excluding the quality-adjusted life years, the net-benefit streams cross from negative to positive generating multiple roots. The interpretation of the IRR when the net-benefit streams cross in unclear \citep{Arrow-Levhari_1969_EJ}. This actually reinforces the importance of considering the improvement in the subject's life due to better health conditions.\footnote{For the analysis in which we do not account for control substitution, in no other case do we have crossing net-benefit streams.}\\
+
+\begin{sidewaystable}[H] 
+\begin{threeparttable}
+\caption{Cost-benefit Analysis Summary}
+\label{table:cba}
 \centering
-\includegraphics[width=.9\columnwidth]{output/accumulatedcosts_f.eps}
-\floatfoot{
-\footnotesize 
-Note: This graph displays each component of the accumulated costs and benefits of our analysis for males. The costs and benefits are discounted at an annual rate of 3\% until birth. All components are displayed according to the ages at which we consider them.}
-\end{figure}
-\end{center}
-
-\noindent The cost figures are also consistent with the benefit figures and with the treatment effects as well. Specifically, the gains through labor income are partly due to the program's effect on educational attainment of the treatment group. Therefore, education costs are considerable for females, increasing on average by absedufm. Benefits related to crime are relatively minor for females, with an average discounted benefit of crimefm, especially when compared to males (crimemm). Although not minor, health benefits for females are not as sizable as for males: women exhibit an average reduction in health costs of healthfm, whereas men exhibit an average reduction of healthmm. Moreover, females and males in the treatment group live healthier years; the improvements in quality-adjusted life years are valued at qalyfm for females and qalymm for males. The reason for these differences is that health treatment effects are much bigger for males than for females. Nevertheless, ABC treatment appears to be beneficial for subjects' health. \\
-
-\noindent Figure~\ref{fig:netbenefmales} displays the accumulated net present value of each component of our analysis for males, after discounting. The lifetime benefits through income are substantial, worth on average inclabormm. Benefits from a reduction in public-transfer income are negative but minor, worth on average transfermm.  These effects do not directly map to treatment effects on education, the cost of which actually decreased by an average of edumm, due to a reduction in grade retention and special education. Instead, the increased labor income relates to higher labor force participation. This is consistent with prior evidence indicating that character skills mediate a considerable amount of the treatment effects of early childhood education programs \citep[see][]{Heckman_Pinto_etal_2013_PerryFactor}. That is, it is not necessarily the case that the average labor income for males increased because of a higher return to education. Rather, this effect may be mediated by an improvement in skills, such as conscientiousness, that impact both educational attainment and labor force success.\\ 
-
-\noindent Crime represents a large benefit of the program for males, worth on average crimemm. This is mainly due to a case of murder in the control group. Given that murder could be an isolated event, we perform a series of sensitivity analyses and calculate the rate of return and the benefit-cost ratio when omitting the crime component. In sum, the benefits for males are greater than those for females in the three main components of the analysis: labor income, crime, and health. Thus, both statistics are greater for males than for females. Alternatively, pooling the results we find that the benefit-cost ratio is ratiopm and the internal rate of return is irrpm. \\
-
-\begin{center}
-\begin{figure}[H] 
-\caption{Accumulated Net Benefits, Males}
-\label{fig:netbenefmales}
-\centering
-\includegraphics[width=.9\columnwidth]{output/accumulatedcosts_m.eps}
-\floatfoot{
-\footnotesize 
-Note: This graph displays each component of the accumulated costs and benefits of our analysis for males. The costs and benefits are discounted at an annual rate of 3\% until birth. All components are displayed according to the ages at which we consider them.}
-\end{figure}
-\end{center}
-
-\scalebox{.7}{
 \begin{tabular}{l r r r r r r r r r}
 \toprule
 	&	\mc{3}{c}{Females}					&	\mc{3}{c}{Males}					&	\mc{3}{c}{Pooled}					\\
@@ -575,10 +549,6 @@ Note: This graph displays each component of the accumulated costs and benefits o
 Removed Component	&	NPV	&	IRR	&	B/C	&	NPV	&	IRR	&	B/C	&	NPV	&	IRR	&	B/C	\\ 
 
 \midrule
-
-% INSERT sensitivity.txt FILE BELOW
-% INSERT sensitivity.txt FILE BELOW
-% INSERT sensitivity.txt FILE BELOW
 
 None	&		&	0.14	&	3.34	&		&	0.13	&	7.04	&		&	\textbf{0.10}	&	\textbf{4.88}	\\
 	&		&	(0.14)	&	(2.92)	&		&	(0.11)	&	(12.50)	&		&	(0.09)	&	(2.29)	\\ \\
@@ -604,14 +574,46 @@ Deadweight Loss	&		&	0.21	&	\textbf{4.65}	&		&	0.15	&	10.12	&		&	0.13	&	\textbf{
 	&		&		&	(8.77)	&		&		&	(42.06)	&		&		&	(5.98)	\\
 5\% Discount Rate	&		&		&	\textbf{2.34}	&		&		&	4.34	&		&		&	\textbf{2.83}	\\
 	&		&		&	(1.58)	&		&		&	(6.39)	&		&		&	(1.31)	\\
-	
-	
-% INSERT sensitivity.txt FILE ABOVE
-% INSERT sensitivity.txt FILE ABOVE
-% INSERT sensitivity.txt FILE ABOVE
-
 \bottomrule
-\end{tabular}}
+\end{tabular}
+\begin{tablenotes}
+\item Note: This table present the estimates of the net present value (NPV) for each component, and the internal rate of return (IRR) and the benefit-to-cost ratio (B/C) of ABC for different scenarios. The first row represents the baseline estimates. The reminder rows present estimates in scenarios in which we remove the NPV estimates of the component listed in the first column. The quantity listed in the NPV columns is the component we actually remove when computing the calculation in each row. All the money figures are in 2014 USD and are discounted to each child's birth age, unless otherwise specified. For the B/C we use a discount rate of $3\%$, unless otherwise specified. The results in bold are significant at the 10\% level in single-side, non-parametric, bootstrapped test. We resample both the experimental and the auxuliary data sources. 
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
+\noindent Finally, we provide a cost-benefit analysis of the program when accounting for control substitution in Table~\ref{table:cbacs}. The first row shows the estimates without accounting for control substitution, i.e. the same as those of the first row in Table~\ref{table:cba}. The second and third rows present results for the two counterfactual comparisons we consider.\\ 
+
+\noindent Before discussing the results, it is worth noting that the sample sizes for some of the cases make the IRR estimates very unstable. For example, the estimates of for females in the staying at home counterfactual are based on an initial sample of 5 observations in the control group, while the estimates for males are based on 7  observations in the control group.\footnote{That is, we observe 5 females and 7 males in the control group who did not attend alternative preschools. Some of the forecasts could be based on even smaller samples due to missing values in some specific outcomes.} In the specific case of females, the IRR corresponding to the staying at home counterfactual is based on crossing net-benefit streams. Similarly, we cannot obtain a real solution for the case of males.\\ 
+
+\noindent The samples in which the alternatives preschools are based are bigger and we are able to obtain real solutions for the IRR even when splitting by males and females. Despite this practical difficulties, the results are consistent with the treatment effects we show in Section~\ref{section:teresults}. Females benefit much more from alternative preschools than from staying at home than males, if compared to ABC. This, the benefit-to-cost ratio of ABC relative to staying at home is high for females and low for males. Conversely, the benefit-to-cost ratio of ABC relative to alternative preschools is high for males and low for females. Given the outcomes that we are able to monetize have higher value for males than for females, the pooled results are more similar to the results for males, than to the results for females. In any case, any of the counterfactual comparisons we consider indicates that ABC is socially efficient. 
+
+\begin{table}[H] 
+\begin{threeparttable}
+\caption{Cost-benefit Analysis Accounting for Control Substitution, ABC}
+\label{table:cbacs}
+\centering
+\begin{tabular}{l c c c c c c }
+\toprule
+	&	\mc{2}{c}{Females}					&	\mc{2}{c}{Males}					&	\mc{2}{c}{Pooled}					\\
+		\cmidrule(lr){2-3}						\cmidrule(lr){4-5}						\cmidrule(lr){6-7}					
+Estimate 	&	IRR	&	B/C	&	IRR	&	B/C	&	IRR	&	B/C	\\
+\midrule
+
+Baseline	&	0.14	&	3.34	&	0.13	&	7.04	&	\textbf{0.10}	&	\textbf{4.88}	\\
+	&	(0.14)	&	(2.92)	&	(0.11)	&	(12.50)	&	(0.09)	&	(2.29)	\\
+Relative to Staying at Home 	&	-0.15	&	\textbf{6.33}	&		&	0.01	&	0.05	&	2.15	\\
+	&	(0.17)	&	(2.01)	&		&	(2.54)	&	(0.08)	&	(2.29)	\\
+Relative to Alternative Preschools	&	\textbf{0.15}	&	2.16	&	\textbf{0.20}	&	\textbf{9.81}	&	\textbf{0.12}	&	\textbf{6.06}	\\
+	&	(0.14)	&	(1.40)	&	(0.15)	&	(6.23)	&	(0.08)	&	(2.43)	\\
+\bottomrule
+\end{tabular}
+\begin{tablenotes}
+\item Note: This table displays estimates of the internal rate of return (IRR) and the benefit-to-cost ratio (B/C) for ABC for three cases. Not accounting for control substitution (baseline); comparing ABC to staying at home (relative to staying at home); comparing ABC to alternative preschools (relative to alternative preschools). For the B/C we use a discount rate of $3\%$. The results in bold are significant at the 10\% level in single-side, non-parametric, bootstrapped test. We resample both the experimental and the auxuliary data sources. 
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
 
 \section{Final Comments} \label{section:conclusion}
 
