--- a/output/mainstatistics.tex
+++ b/output/mainstatistics.tex
@@ -15,12 +15,18 @@
 
 %Counts, control substitution
 %Males
-\newcommand{\positivecsm}{$58\%$}
-\newcommand{\positivescsm}{$25\%$}
+\newcommand{\positivecsnm}{$58\%$}
+\newcommand{\positivescsnm}{$25\%$}
+
+\newcommand{\positivecsam}{$74\%$}
+\newcommand{\positivescsam}{$38\%$}
 
 %Females
-\newcommand{\positivecsf}{$83\%$}
-\newcommand{\positivescsf}{$46\%$}
+\newcommand{\positivecsnf}{$83\%$}
+\newcommand{\positivescsnf}{$46\%$}
+
+\newcommand{\positivecsaf}{$73\%$}
+\newcommand{\positivescsaf}{$23\%$}
 
 %Pooled
 
@@ -28,6 +34,10 @@
 %Males
 
 %Females
+\newcommand{\hsgradf}{$7$}
+\newcommand{\yearsedf}{$1.2$}
+
+
 
 %Pooled
 
@@ -57,4 +67,9 @@
 %Pooled
 \newcommand{\bcp}{$4.88$}
 \newcommand{\bcsep}{$2.29$}
+
+%NPV streams
+%Pooled
+\newcommand{\parincomenpvp}{$\$75,187$}
+
 
